--- a/css/style.css
+++ b/css/style.css
@@ -350,6 +350,11 @@ h6 {
 }
 
 .header {
+  z-index: 50;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   background: #F7F7F7;
 }
 @media (min-width: 73.125em) {
@@ -679,17 +684,17 @@ h6 {
 }
 @media (min-width: 73.125em) {
   .page__wel {
-    padding-top: 7.5rem;
+    padding-top: 12.5rem;
   }
 }
 @media (min-width: 20em) and (max-width: 73.125em) {
   .page__wel {
-    padding-top: clamp( 0.625rem , -1.9632352941rem  +  12.9411764706vw , 7.5rem );
+    padding-top: clamp( 3.125rem , -0.4044117647rem  +  17.6470588235vw , 12.5rem );
   }
 }
 @media (max-width: 20em) {
   .page__wel {
-    padding-top: 0.625rem;
+    padding-top: 3.125rem;
   }
 }
 @media (min-width: 73.125em) {
@@ -826,10 +831,9 @@ h6 {
 .wel-page__content::before {
   content: url("../img/welcome/decor.svg");
   position: absolute;
-  width: 100%;
-  height: 100%;
   top: -17.3611111111%;
   left: 1.7361111111%;
+  z-index: 1;
 }
 @media (max-width: 47.99875em) {
   .wel-page__content::before {
@@ -846,7 +850,7 @@ h6 {
   }
 }
 .row-wel__content {
-  z-index: 1;
+  z-index: 2;
 }
 @media (min-width: 47.99875em) {
   .row-wel__content {
@@ -859,6 +863,7 @@ h6 {
   }
 }
 .row-wel__title {
+  z-index: 6;
   line-height: 1.2419354839;
 }
 @media (min-width: 73.125em) {
